--- a/static/src/stylesheets/module/commercial/glabs/_hosted.scss
+++ b/static/src/stylesheets/module/commercial/glabs/_hosted.scss
@@ -442,13 +442,16 @@ $hosted-video-height: 551px;
 
 .hosted__meta {
     position: absolute;
-    left: 88px;
-    right: 88px;
+    left: 98px;
+    right: 98px;
     bottom: 44px;
     color: #ffffff;
 
     @include mq($until: tablet) {
         display: none;
+    }
+    @include mq($until: leftCol) {
+        left: $gs-gutter;
     }
 }
 
